Adjusted max-hight to prevent margin collapse on select tag

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -153,6 +153,7 @@ form {
   .card-month {
     flex-basis: 33%;
     margin-right: 0.5rem;
+    max-height: 54px;
   }
 
   .card-asterisk-month::after {
@@ -173,6 +174,7 @@ form {
 
   .card-year {
     flex-basis: 33%;
+    max-height: 54px;
   }
 
   .card-cvv {
@@ -311,7 +313,7 @@ form {
 
     .card-cvv {
       width: 100%;
-      margin: 0;
+      margin: 1rem 0 0 0;
       flex-basis: auto;
     }
   }
@@ -332,10 +334,13 @@ form {
 
 @media (max-width: 430px) {
   .expiry-date-and-cvv {
-    .card-month,
     .card-year {
       flex-basis: 100%;
-      margin: 0;
+    }
+
+    .card-month {
+      flex-basis: 100%;
+      margin: 0 0 1rem 0;
     }
   }
 
